# RGPU

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  claude_mem.md  docker-compose.yml
.github/workflows/: release.yml
crates/rgpu-cli/: Cargo.toml  build.rs
crates/rgpu-cli/src/: main.rs  service.rs  verify.rs
crates/rgpu-client/: Cargo.toml
crates/rgpu-client/src/: daemon.rs  device_manager.rs  ipc.rs  lib.rs  pool_manager.rs
crates/rgpu-common/: Cargo.toml
crates/rgpu-common/src/: ffi.rs  lib.rs  logging.rs  platform.rs
crates/rgpu-core/: Cargo.toml
crates/rgpu-core/src/: config.rs  error.rs  handle_map.rs  instance_lock.rs  lib.rs  role.rs
crates/rgpu-cuda-interpose/: Cargo.toml
crates/rgpu-cuda-interpose/src/: context.rs  device.rs  error.rs  event.rs  execution.rs  handle_store.rs  ipc_client.rs  lib.rs  memory.rs  module.rs  proc_address.rs  stream.rs  stubs.rs
crates/rgpu-ipc-client/: Cargo.toml
crates/rgpu-ipc-client/src/: lib.rs
crates/rgpu-nvapi-interpose/: Cargo.toml
crates/rgpu-nvapi-interpose/src/: ipc_client.rs  lib.rs
crates/rgpu-nvdec-interpose/: Cargo.toml
crates/rgpu-nvdec-interpose/src/: handle_store.rs  ipc_client.rs  lib.rs
crates/rgpu-nvenc-interpose/: Cargo.toml
crates/rgpu-nvenc-interpose/src/: buffer.rs  encoder.rs  handle_store.rs  ipc_client.rs  lib.rs  stubs.rs  types.rs
crates/rgpu-nvml-interpose/: Cargo.toml
crates/rgpu-nvml-interpose/src/: ipc_client.rs  lib.rs
crates/rgpu-protocol/: Cargo.toml
crates/rgpu-protocol/src/: cuda_commands.rs  error.rs  gpu_info.rs  handle.rs  lib.rs  messages.rs  nvdec_commands.rs  nvenc_commands.rs  vulkan_commands.rs  wire.rs
crates/rgpu-server/: Cargo.toml
crates/rgpu-server/src/: cuda_driver.rs  cuda_executor.rs  gpu_discovery.rs  lib.rs  nvdec_driver.rs  nvdec_executor.rs  nvenc_driver.rs  nvenc_executor.rs  server.rs  session.rs  vulkan_executor.rs
crates/rgpu-server/src/cuda/: context.rs  device.rs  event.rs  execution.rs  memory.rs  mod.rs  module.rs  stream.rs
crates/rgpu-server/src/vulkan/: buffer.rs  command.rs  descriptor.rs  device.rs  graphics_pipeline.rs  image.rs  instance.rs  memory.rs  mod.rs  physical_device.rs  pipeline.rs  renderpass.rs  sync.rs
crates/rgpu-server/tests/: cuda_vector_add.rs  vulkan_executor_test.rs  vulkan_rendering_test.rs
crates/rgpu-transport/: Cargo.toml
crates/rgpu-transport/src/: auth.rs  connection.rs  error.rs  lib.rs  quic.rs  tls.rs
crates/rgpu-ui/: Cargo.toml
crates/rgpu-ui/src/: app.rs  data_fetcher.rs  lib.rs  service_control.rs  service_detection.rs  state.rs
crates/rgpu-ui/src/panels/: client_panel.rs  config_editor.rs  control.rs  dashboard.rs  gpu_overview.rs  metrics.rs  mod.rs  server_panel.rs
crates/rgpu-ui/src/widgets/: gpu_card.rs  metric_chart.rs  mod.rs
crates/rgpu-vk-icd/: Cargo.toml
crates/rgpu-vk-icd/src/: command.rs  descriptor.rs  device.rs  dispatch.rs  graphics_pipeline.rs  handle_store.rs  image.rs  instance.rs  ipc_client.rs  lib.rs  memory.rs  physical_device.rs  pipeline.rs  renderpass.rs  sync.rs
deploy/: install.sh  rgpu-client.service  rgpu-server.service
docs/superpowers/plans/: 2026-04-10-docker-gpu-transparency.md  2026-04-10-wddm-kmd-fase1-bus-driver.md
docs/superpowers/specs/: 2026-04-10-docker-gpu-transparency-design.md  2026-04-10-wddm-kmd-remote-gpu-design.md
drivers/linux/rgpu-vgpu/: 99-rgpu.rules  Makefile  README.md  dkms.conf  rgpu_vgpu.c
drivers/windows/rgpu-bus/: install.cmd  rgpu-bus.c  rgpu-bus.h  rgpu-bus.inf  rgpu-bus.vcxproj  test-bus.c
drivers/windows/rgpu-vgpu/: README.md  build.cmd  rgpu-vgpu.c  rgpu-vgpu.inf
manifests/: rgpu_icd.json
packaging/config/: rgpu.toml.template  rgpu_icd_linux.json  rgpu_icd_macos.json
packaging/docker/: Invoke-DockerRgpu.ps1  docker-rgpu.cmd  install-rgpu-docker.ps1  rgpu-docker-compose.yml
packaging/linux/: Dockerfile.builder  Dockerfile.example  build-container-libs.sh  build-linux.sh  docker-compose.example.yml  rgpu-client.service  rgpu-server.service  rgpu.desktop
packaging/linux/deb/: postinst.sh  postrm.sh  prerm.sh  rgpu-ld.conf
packaging/linux/rpm/: post_install.sh  pre_uninstall.sh
packaging/macos/: build-macos.sh
packaging/macos/launchd/: com.rgpu.client.plist  com.rgpu.server.plist
packaging/macos/pkg/: distribution.xml
packaging/macos/pkg/resources/: license.html  welcome.html
packaging/macos/pkg/scripts/: postinstall
packaging/windows/: build-windows.ps1
packaging/windows/msi/: build-msi.ps1  license.rtf  rgpu.wxs
packaging/windows/nsis/: license.txt  rgpu-installer.nsi
scripts/: ffi_guard_transform.py
tests/docker/: nvidia-smi-rgpu.sh  run_tests.sh  test_cuda.c  test_docker_gpu_visibility.sh  test_ffmpeg_hwaccel.sh  test_nvdec.c  test_nvenc.c  test_nvml.c  test_vulkan.c
tests/integration/: cuda_vector_add.rs
