[package]
name = "rgpu-client"
version.workspace = true
edition.workspace = true

[dependencies]
rgpu-protocol = { workspace = true }
rgpu-transport = { workspace = true }
rgpu-core = { workspace = true }
rgpu-common = { workspace = true }
rgpu-server = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[target.'cfg(unix)'.dependencies]
# Unix domain sockets are built into tokio

[target.'cfg(windows)'.dependencies]
# Named pipes are built into tokio
