[package]
name = "rgpu-ui"
version.workspace = true
edition.workspace = true

[dependencies]
rgpu-protocol = { workspace = true }
rgpu-transport = { workspace = true }
rgpu-core = { workspace = true }
rgpu-common = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
